fix(realtime): fence fragmented replay and verify production configuration